# randos

./: .vimspector.json  CMakeLists.txt  build.xml  cpu-management.txt  tools.txt
dotfiles/: .alacritty.yml  .bashrc  .zshrc
dotfiles/.config/i3/: config
dotfiles/.config/i3status/: config
dotfiles/.config/mc/: ini  mc.keymap  menu  panels.ini
dotfiles/.vim/: vimrc
dotfiles/lf/: lfrc
dotfiles/picom/: picom.conf
dotfiles/polybar/: config.ini  launch.sh
dotfiles/rofi/: config.rasi
